forth/test/fail/test_const_fold_bit_mask_get_bad.af
use' ../../lang.af

\ Must fail to compile: const-folded masks must be nonzero .and contiguous.
fun: .test_const_fold_bit_mask_get_bad { -- out }
  0b1111 0b1010 .bit_mask_get
end
